--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "d3": "^7.8.5",
+    "events": "^3.3.0",
     "jquery": "^3.7.1",
+    "topojson": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
   },
