--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,19 @@
     "topojson": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
+    "vue3-leaflet": "^1.0.48",
     "vuetify": "^3.3.23"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "leaflet": "^1.9.4",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
     "webpack": "^5.89.0"
