--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.8.3",
     "d3": "^7.8.5",
     "events": "^3.3.0",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "topojson": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
