--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "leaflet": "^1.9.4",
+    "nodemon": "^3.0.1",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
     "webpack": "^5.89.0"
